# cob_firmware

./: .clang-format  .gdbinit  .gitignore  CMakeLists.txt  Doxyfile  LICENSE  Makefile  README.md  leds.c  leds.h  main.c  nrf52.ld  nrf52840.h  nrf52_startup.c  switches.c  switches.h
docs/: configuration.md  gpio.md  keyscan.md  radio_arq.md  switches.md  usbd.md
scripts/: .gdbinit  nrf52.ld
src/: CMakeLists.txt  core.h  device.c  device.h  gpio.c  gpio.h  gpiote.h  keymap.c  keymap.h  keyscan.c  keyscan.h  leds.c  leds.h  main.c  matrix_scan.c  matrix_scan.h  nrf52.ld  nrf52840.h  nrf52_startup.c  nvic.h  probe.c  probe.h  radio.c  radio.h  radio_app.c  radio_app.h  switches.c  switches.h  usb.c  usb.h  utils.c  utils.h
src/drivers/: clock.c  clock.h  core.c  core.h  gpio.c  gpio.h  gpiote.c  gpiote.h  nrf52840_bitfields.h  power.h  probe.c  probe.h  radio.c  radio.h  rtc.c  rtc.h  timer.c  timer.h  usbd.c  usbd.h  usbd_desc.c  usbd_desc.h  usbd_descriptors.c  usbd_descriptors.h  usbd_hid.c  usbd_hid.h
src/examples/: blinky.c  examples.h  keymap_hid.c  matrix_leds.c  radio_arq_auto_tx.c  radio_arq_hid.c  radio_arq_leds.c  radio_auto_tx.c  radio_hid.c  radio_leds.c  simple_hid.c  switches.c  switches_led.c  switches_leds.c  switches_radio.c  switches_radio_hid.c
src/protocol/: radio_arq.c  radio_arq.h  usb_descriptors.c  usb_descriptors.h  usb_hid.c  usb_hid.h
tests/: CMakeLists.txt  keymap.c  keyscan.c  main.c  tests.h
tests/mocks/: core.c  gpio.c  gpiote.c  timer.c
